# SET09121-Coursework

./: .dir-locals.el  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  COURSEWORK.vcxproj  COURSEWORK.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  Code_Documentation.md  Doxyfile  Games_Engineering.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Installer.iss  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  animation_lines_code  cmake_install.cmake  copy_resources.vcxproj  copy_resources.vcxproj.filters  enemy_DEgg_FSM.cpp  enemy_DEgg_FSM.hpp
Coursework/: main.cpp
docs/: index.html
res/: test.xml
res/levels/: level1.xml
src/: button.hpp  checkbox.hpp  debug.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  goal.cpp  goal.hpp  level_manager.cpp  level_manager.hpp  level_objects.cpp  level_objects.hpp  main.cpp  misc.cpp  misc.hpp  player.cpp  player.hpp  sound_manager.cpp  sound_manager.hpp
